hphp/test/zend/good/ext/standard/tests/file/006_basic.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip Not on Windows');
}
// Skip if being run by root
if (posix_geteuid() == 0) {
        die('skip cannot be run as root');
}
}
