hphp/test/zend/bad/ext/standard/tests/file/stat_basic-win32.php.skipif
<?php
if (substr(PHP_OS, 0, 3) != 'WIN') {
    die('skip.. valid only for Windows');
}
?>